--- a/scripts/concordances.ipynb
+++ b/scripts/concordances.ipynb
@@ -519,21 +519,30 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-03T13:54:08.871702Z",
-     "start_time": "2024-04-03T13:30:26.137849Z"
+     "end_time": "2024-04-03T16:09:19.283333Z",
+     "start_time": "2024-04-03T15:52:25.447126Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# for next run:\n",
+    "%%time\n",
     "output_dir = \"../data/rawsentences_bezpeci/\"\n",
     "target = \"bezpečím?\"\n",
     "for filename in filenames:\n",
     "    get_concordances(filename=filename, target = target, output_dir =output_dir)"
    ],
    "id": "89932e34abc98d88",
-   "outputs": [],
-   "execution_count": 11
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 16min 31s, sys: 9.75 s, total: 16min 41s\n",
+      "Wall time: 16min 53s\n"
+     ]
+    }
+   ],
+   "execution_count": 19
   },
   {
    "metadata": {
